modificacao do menu #1

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Site 2.0</title>
-        <link rel="stylesheet" type="text/css" href="estilo.css">
+        <link rel="stylesheet" type="text/css" href="menu.css">
     </head>
     <body>
         <header>
             <div class="conteudo1">
+
+                <!--
                 <input type="checkbox" id="bt_menu">
                 <label for="bt_menu">&#9776;</label>
+                -->
 
                 <nav class="menu">
                     <ul>
@@ -20,7 +23,13 @@
                                 <li><a href="#">Porções</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">pedidos</a></li>
+                        <li><a href="#">pedidos</a>
+                            <ul>
+                                <li><a href="#">Sanduiches</a></li>
+                                <li><a href="#">bebidas</a></li>
+                                <li><a href="#">Porções</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">feedback</a></li>
                     </ul>
                 </nav>
