--- a/index.html
+++ b/index.html
@@ -7,36 +7,25 @@
     </head>
     <body>
         <header>
-            <div class="conteudo1">
-
-                <!--
-                <input type="checkbox" id="bt_menu">
-                <label for="bt_menu">&#9776;</label>
-                -->
-
-                <nav class="menu">
-                    <ul>
-                        <li><a href="#">Cardápio</a>
-                            <ul>
-                                <li><a href="#">Sanduiches</a></li>
-                                <li><a href="#">bebidas</a></li>
-                                <li><a href="#">Porções</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">pedidos</a>
-                            <ul>
-                                <li><a href="#">Sanduiches</a></li>
-                                <li><a href="#">bebidas</a></li>
-                                <li><a href="#">Porções</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">feedback</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="conteudo">
-            </div>
-            
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">CARDÁPIO</a>
+                        <ul>
+                            <li><a href="#">Sanduiches</a></li>
+                            <li><a href="#">bebidas</a></li>
+                            <li><a href="#">Porções</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">PEDIDOS</a>
+                        <ul>
+                            <li><a href="#">Sanduiches</a></li>
+                            <li><a href="#">bebidas</a></li>
+                            <li><a href="#">Porções</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">FEEDBACK</a></li>
+                </ul>
+            </nav>
         </header>
     </body>
 </html>
