criação do cabecalho

--- a/index.html
+++ b/index.html
@@ -4,28 +4,54 @@
         <meta charset="utf-8">
         <title>Site 2.0</title>
         <link rel="stylesheet" type="text/css" href="menu.css">
+        <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <body>
         <header>
             <nav class="menu">
                 <ul>
-                    <li><a href="#">CARDÁPIO</a>
+                    <li><a href="#cardapio">CARDÁPIO</a>
                         <ul>
-                            <li><a href="#">Sanduiches</a></li>
-                            <li><a href="#">bebidas</a></li>
-                            <li><a href="#">Porções</a></li>
+                            <li><a href="#sanduiches">Sanduiches</a></li>
+                            <li><a href="#bebidas">bebidas</a></li>
+                            <li><a href="#porcoes">Porções</a></li>
                         </ul>
                     </li>
                     <li><a href="#">PEDIDOS</a>
                         <ul>
-                            <li><a href="#">Sanduiches</a></li>
-                            <li><a href="#">bebidas</a></li>
-                            <li><a href="#">Porções</a></li>
+                            <li><a href="#">Pedidos em preparo</a></li>
+                            <li><a href="#">Pedidos Realizados</a></li>
                         </ul>
                     </li>
                     <li><a href="#">FEEDBACK</a></li>
                 </ul>
             </nav>
         </header>
+
+        <Main>
+            <section id="cabecalho">
+                <div id="bloco1">
+                    <div class="centro">
+                        <h1>
+                            ken! Burguer
+                        </h1>
+                        <h2>
+                            O melhor hamburguer artesanal.
+                        </h2>
+                    </div>
+                </div>
+                <div id="bloco2"></div>
+                <div id="bloco3"></div>
+            </section>
+            <section id="sanduiches">
+                sanduiches
+            </section>
+            <section id="bebidas">
+                bebidas
+            </section>
+            <section id="porcoes">
+                porcoes
+            </section>
+        </Main>
     </body>
 </html>
