box de informação

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <li><a href="#cardapio">CARDÁPIO</a>
                         <ul>
                             <li><a href="#sanduiches">Sanduiches</a></li>
-                            <li><a href="#bebidas">bebidas</a></li>
+                            <li><a href="#bebidas">Bebidas</a></li>
                             <li><a href="#porcoes">Porções</a></li>
                         </ul>
                     </li>
@@ -41,7 +41,44 @@
                     </div>
                 </div>
                 <div id="bloco2"></div>
-                <div id="bloco3"></div>
+                <div id="bloco3">
+                    <div id="bloco3-s1">
+                        <div>Avaliações
+                            <br>
+                            <br>
+                            4.3
+                            &#9733;
+                        </div>
+                        <div class="delivery">
+                            Entrega <br>
+                            <br>
+                            <img src="imagens/delivery.png" alt="">
+                        </div> 
+                        <div>
+                            Retirada <br>
+                            <br>
+                            40 ~ 50 min
+                        </div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div>
+                            Pagamento 
+                            <br><br>
+                            <img src="imagens/cartao-de-credito.png" alt="">
+                        </div>
+                        <div>
+                            Telefone
+                            <br><br>
+                            <img src="imagens/telefone.png" alt="">
+                        </div>
+                        <div>
+                            Horário
+                            <br><br>
+                            <img src="imagens/horario.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="sanduiches">
                 sanduiches
@@ -52,6 +89,34 @@
             <section id="porcoes">
                 porcoes
             </section>
+            <footer>
+                footer
+            </footer>
         </Main>
     </body>
 </html>
+
+<!--
+     <table border="1">
+                        <tr>
+                            <th>Avaliações</th>
+                            <th colspan="2">Entrega | Retirada</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                4.3
+                                &#9733;
+                            </td>
+                            <td colspan="2">40 ~ 50 min</td>
+                        </tr>
+                        <tr>
+                            <th>Pagamento</th>
+                            <th colspan="2">Funcionamento</th>
+                        </tr>
+                        
+                        <tr>
+                            <th></th>
+                        </tr>
+                    </table>
+
+-->
